--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
         "bot",
         "link"
     ],
-    "repository": "https://github.com/Sallat-M/FileToLink",
+    "repository": "https://github.com/xcracker000/FileToLink",
     "env": {
         "API_ID": {
             "description": "Get it from  https://my.telegram.org"
